--- a/bulldogbrain/templates/list.html
+++ b/bulldogbrain/templates/list.html
@@ -49,14 +49,20 @@
 
     {% endif %}
 </div> -->
-
-<strong style = "position:relative; top:-110px; font-size: 45px">Reminders</strong>
+<style>
+    body  {
+      background-image: url("https://cdn.wallpapersafari.com/7/71/FRDyLv.jpg");
+      background-size: 100%;
+      background-position-y: 0px;
+    }
+</style>
+<strong style = "position:relative; top:-110px; font-size: 45px; color:white;">Reminders</strong>
 <div class="row">
 <div class="column">
-    <strong style = "position:relative; top:-130px; font-size: 40px">Assignments</strong>
+    <strong style = "position:relative; top:-130px; font-size: 40px; color:white;">Assignments</strong>
             <table style = "position:relative; top:-130px" class="table table-striped">
             <thead>
-                <tr>
+                <tr style="color:white;">
                     <th><img src="static/images/checkMark.png" alt="Checkmark" width="20" height="20"></th>
                     <th>Assignment</th>
                     <th>Course</th>
@@ -69,7 +75,7 @@
                 <!-- TODO: Loop through the database entries to display them in this table -->
                 {% for assignments in assignments %}
 
-                <tr>
+                <tr style="color:white;  background-color:rgba(137, 133, 133, 0.55);"">
                     <td>
                         <form id="completion" action="/list" method="post">
                             <input autocomplete="off" type="checkbox" id="assignment_id" name="assignment_id" value="{{ assignments.id }}" onclick="submit()" required>
@@ -96,10 +102,10 @@
         </table>
     </div>
     <div class="column">
-        <strong style = "position:relative; top:-130px; font-size: 40px">Events</strong>
+        <strong style = "position:relative; top:-130px; font-size: 40px; ">Events</strong>
             <table style = "position:relative; top:-130px" class="table table-striped">
             <thead>
-                <tr>
+                <tr style="color:white;">
                     <th><img src="static/images/checkMark.png" alt="Checkmark" width="20" height="20"></th>
                     <th>Event</th>
                     <th>Start</th>
@@ -112,7 +118,7 @@
             <tbody>
                 <!-- TODO: Loop through the database entries to display them in this table -->
                 {% for events in events %}
-                <tr>
+                <tr style="color:white;  background-color:rgba(137, 133, 133, 0.55);"">
                     <td>
                         <form id="completion" action="/list" method="post">
                             <input autocomplete="off" type="checkbox" id="event_id" name="event_id" value="{{ events.event_id }}" onclick="submit()" required>
