--- a/bulldogbrain/templates/list.html
+++ b/bulldogbrain/templates/list.html
@@ -102,7 +102,7 @@
         </table>
     </div>
     <div class="column">
-        <strong style = "position:relative; top:-130px; font-size: 40px; ">Events</strong>
+        <strong style = "position:relative; top:-130px; font-size: 40px; color:white; ">Events</strong>
             <table style = "position:relative; top:-130px" class="table table-striped">
             <thead>
                 <tr style="color:white;">
