--- a/bulldogbrain/templates/makingClasses.html
+++ b/bulldogbrain/templates/makingClasses.html
@@ -5,6 +5,13 @@
 {% endblock %}
 
 {% block main %}
+    <style>
+        body  {
+        background-image: url("/static/images/backgroundBDBrain.jpeg");
+        background-size: 100%;
+        background-position-y: 0px;
+        }
+    </style>
     <form action="/makingClasses" method="post">
         <strong style="font-size:55px;position:relative;top:-40px">ADD COURSE</strong>
         <br>
