--- a/bulldogbrain/templates/makingClasses.html
+++ b/bulldogbrain/templates/makingClasses.html
@@ -13,31 +13,31 @@
         }
     </style>
     <form action="/makingClasses" method="post">
-        <strong style="font-size:55px;position:relative;top:-40px">ADD COURSE</strong>
+        <strong style="font-size:55px;position:relative;top:-40px; color:white">ADD COURSE</strong>
         <br>
         <div class="mb-3">
             <input style="height:60px;width:300px;font-size:25px;" autocomplete="off" autofocus class="form-control mx-auto w-auto" id="title" name="title" placeholder="Name of Class" type="text" required>
         </div>
         <br>
-        <div style = "transform: scale(2)" class="mb-3">
-            <span class="dot1"></span>
-            <span class="dot2"></span>
-            <span class="dot3"></span>
-            <span class="dot4"></span>
-            <span class="dot5"></span>
-            <span class="dot6"></span>
+        <div class="mb-3">
+            <span style = "transform: scale(2)" class="dot1"></span>
+            <span style = "transform: scale(2)" class="dot2"></span>
+            <span style = "transform: scale(2)" class="dot3"></span>
+            <span style = "transform: scale(2)" class="dot4"></span>
+            <span style = "transform: scale(2)" class="dot5"></span>
+            <span style = "transform: scale(2)" class="dot6"></span>
             <br>
-            <input class="courseColor1" type="radio" id="color" name="color" value="red" required>
+            <input style = "transform: scale(2)" class="courseColor1" type="radio" id="color" name="color" value="red" required>
             <label for="red"></label>
-            <input class="courseColor2" type="radio" id="color" name="color" value="blue">
+            <input style = "transform: scale(2)" class="courseColor2" type="radio" id="color" name="color" value="blue">
             <label for="blue"></label>
-            <input class="courseColor3" type="radio" id="color" name="color" value="green">
+            <input style = "transform: scale(2)"class="courseColor3" type="radio" id="color" name="color" value="green">
             <label for="green"></label>
-            <input class="courseColor4" type="radio" id="color" name="color" value="purple">
+            <input style = "transform: scale(2)" class="courseColor4" type="radio" id="color" name="color" value="purple">
             <label for="purple"></label>
-            <input class="courseColor5" type="radio" id="color" name="color" value="lightcoral">
+            <input style = "transform: scale(2)" class="courseColor5" type="radio" id="color" name="color" value="lightcoral">
             <label for="lightcoral"></label>
-            <input class="courseColor6" type="radio" id="color" name="color" value="orange">
+            <input style = "transform: scale(2)" class="courseColor6" type="radio" id="color" name="color" value="orange">
             <label for="orange"></label>
             <br>
             <br>
