--- a/bulldogbrain/templates/assignmentsform.html
+++ b/bulldogbrain/templates/assignmentsform.html
@@ -5,30 +5,31 @@
 {% endblock %}
 
 {% block main %}
-    <style>
+    <!-- <style>
         body  {
         /* background-image: url("/static/images/backgroundBDBrain.jpeg");
         background-size: 100%;
         background-position-y: 0px; */
         background: url("/static/images/greyBox.jpeg") center no-repeat,
                     url("/static/images/backgroundBDBrain.jpeg") left top repeat;
-        size: 0%, 0%;
+        size: 0%, 100%;
         /* padding: 15px; */
         }
-    </style>
-    <!-- <style>
+    </style> -->
+    <style>
         body  {
-        background-image: url("/static/images/greyBox.jpeg");
-        background-size: 50%;
+        background-image: url("/static/images/backgroundBDBrain.jpeg");
+        background-size: 100%;
         background-position-y: 0px;
         }
-    </style> -->
+    </style>
+    <div><div class='box'></div></div>
     <form action="/assignmentsform" method="post">
         <div class="mb-3">
             <input autocomplete="off" autofocus class="form-control mx-auto w-auto" id="title" name="title" placeholder="Name of Assignment" type="text" required>
         </div>
 
-        <strong>Course</strong>
+        <strong style="color:white">Course</strong>
         <div>
         <select name="course" id="course">
             {% for courseTitle in courseTitle %}
@@ -38,7 +39,7 @@
         </div>
         <br>
         <div>
-            <strong>Deadline</strong >
+            <strong style="color:white">Deadline</strong >
             <input autocomplete="off" class="form-control mx-auto w-auto" id="deadline" name="deadline" type="datetime-local" required>
         </div>
         <br>
