--- a/bulldogbrain/templates/dayImportance.html
+++ b/bulldogbrain/templates/dayImportance.html
@@ -5,26 +5,21 @@
 {% endblock %}
 
 {% block main %}
-<h1>Today</h1>
-    <div>
-        <form action="/list" method="post">
-            <input autocomplete="off" class="form-control mx-auto w-auto" id="id" name="id" placeholder="#" type="int" required>
-            <input type="radio" id="assignment" name="type" value="assignment">
-            <label for="type">Assignment</label>
-            <input type="radio" id="type" name="type" value="event">
-            <label for="type">Event</label>
-            <button class="btn btn-primary" type="submit">Completed!</button>
-        </form>
-        <br>
-
-    </div>
+<style>
+    body  {
+      background-image: url("https://cdn.wallpapersafari.com/7/71/FRDyLv.jpg");
+      background-size: 100%;
+      background-position-y: 0px;
+    }
+</style>
+<strong style = "color:white; position: relative; top: -110px; font-size: 45px" >Today</strong>
     <div class="row">
     <div class="column">
-        <h2 style = "position:relative;top:-90px">Assignments</h2>
-            <table style = "position:relative;top:-90px" class="table table-striped">
+        <strong style = "color:white; position:relative; top:-130px; font-size: 40px">Assignments</strong>
+            <table style = "position:relative; top:-130px;" class="table table-striped">
                 <thead>
-                    <tr>
-                        <th>#</th>
+                    <tr style="color:white;">
+                        <th><img src="static/images/checkMark.png" alt="Checkmark" width="20" height="20"></th>
                         <th>Assignment</th>
                         <th>Course</th>
                         <th>Deadline</th>
@@ -35,8 +30,21 @@
                 <tbody>
                     <!-- TODO: Loop through the database entries to display them in this table -->
                     {% for assignments in assignments %}
-                    <tr>
-                        <td>{{ assignments.id }}</td>
+                    <tr style="color:white;  background-color:rgba(137, 133, 133, 0.55);">
+                        <td>
+                            <form id="completion" action="/urgent" method="post">
+                                <input autocomplete="off" type="checkbox" id="assignment_id" name="assignment_id" value="{{ assignments.id }}" onclick="submit()" required>
+                            </form>
+                            <!-- Source: https://www.quora.com/How-can-I-submit-two-forms-with-one-button -->
+                            <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+                            <script> 
+                            function submit() {
+                             $(document).ready(function () { 
+                               $("#completion").submit(); 
+                             });
+                             }
+                            </script>
+                        </td>
                         <td>{{ assignments.title }}</td>
                         <td>{{ assignments.course }}</td>
                         <td>{{ assignments.date }} @ {{ assignments.time }}</td>
@@ -46,13 +54,16 @@
                     {% endfor %}
                 </tbody>
             </table>
+
+            <!-- <img src="https://printer.yale.edu/sites/default/files/files/iPhone18.jpg" style="width:80px; height:144px; position:relative; top:-380px;" class="imagecenter"></img> -->
         </div>
+        
         <div class="column">
-            <h2 style = "position:relative;top:-90px">Events</h2>
-            <table style = "position:relative;top:-90px" class="table table-striped">
+            <strong style = "color:white; position:relative; top:-130px; font-size: 40px">Events</strong>
+            <table style = "position:relative; top:-130px" class="table table-striped">
                 <thead>
-                    <tr>
-                        <th>#</th>
+                    <tr style="color:white;">
+                        <th><img src="static/images/checkMark.png" alt="Checkmark" width="20" height="20"></th>
                         <th>Event</th>
                         <th>Start</th>
                         <th>End</th>
@@ -64,8 +75,20 @@
                 <tbody>
                     <!-- TODO: Loop through the database entries to display them in this table -->
                     {% for events in events %}
-                    <tr>
-                        <td>{{ events.event_id }}</td>
+                    <tr style="color:white; background-color:rgba(137, 133, 133, 0.55);">
+                        <td>
+                            <form id="completion" action="/urgent" method="post">
+                                <input autocomplete="off" type="checkbox" id="event_id" name="event_id" value="{{ events.event_id }}" onclick="submit()" required>
+                            </form>
+                            <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+                            <script> 
+                            function submit() {
+                             $(document).ready(function () { 
+                               $("#completion").submit(); 
+                             });
+                             }
+                            </script>
+                        </td style="color:white;">
                         <td>{{ events.title }}</td>
                         <td>{{ events.start_date }} @ {{ events.start_time }}</td>
                         <td>{{ events.end_date }} @ {{ events.end_time }}</td>
@@ -76,6 +99,7 @@
                     {% endfor %}
                 </tbody>
             </table>
+            <!-- <img src="https://printer.yale.edu/sites/default/files/files/iPhone18.jpg" style="width:80px; height:144px; position:relative; top:-380px;" class="imagecenter"></img> -->
         </div>
     </div>
 {% endblock %}
