--- a/bulldogbrain/templates/eventsform.html
+++ b/bulldogbrain/templates/eventsform.html
@@ -12,7 +12,7 @@
       background-position-y: 0px;
     }
 </style>
-<form action="/eventsform" method="post">
+<form  style="color:white" action="/eventsform" method="post">
     <div class="mb-3">
         <input autocomplete="off" autofocus class="form-control mx-auto w-auto" id="title" name="title" placeholder="Event Name" type="text" required>
     </div>
@@ -38,6 +38,7 @@
         <label>End Time: (optional)</label>
         <input autocomplete="off" class="form-control mx-auto w-auto" id="end_time" name="end_time" type="time">
     </div>
+    <br>
     <div class="mb-3">
         <input class="form-control mx-auto w-auto" id="notes" name="notes" placeholder="Notes" type="Text">
     </div>
