--- a/bulldogbrain/templates/layout.html
+++ b/bulldogbrain/templates/layout.html
@@ -30,12 +30,12 @@
           <div class="collapse navbar-collapse" id="navbar">
               {% if session["user_id"] %}
                   <ul class="navbar-nav me-auto mt-2">
-                    <li style="font-size: 19px" class="nav-item"><a class="nav-link" href="/urgent">Bulldogbrain</a></li>
-                    <li style="font-size: 19px" class="nav-item"><a class="nav-link" href="/list">List</a></li>  
-                    <li style="font-size: 19px" class="nav-item"><a class="nav-link" href="/archive">Archive</a></li>
+                    <li style="font-size: 20px" class="nav-item"><a class="nav-link" href="/today">Bulldogbrain</a></li>
+                    <li style="font-size: 20px" class="nav-item"><a class="nav-link" href="/list">List</a></li>  
+                    <li style="font-size: 20px" class="nav-item"><a class="nav-link" href="/archive">Archive</a></li>
                   </ul>
                   <ul class="navbar-nav ms-auto mt-2">
-                      <li style="font-size: 19px" class="nav-item"><a class="nav-link" href="/logout">Log Out</a></li>
+                      <li style="font-size: 20px" class="nav-item"><a class="nav-link" href="/logout">Log Out</a></li>
                   </ul>
                   
               {% else %}
