--- a/bulldogbrain/templates/register.html
+++ b/bulldogbrain/templates/register.html
@@ -5,6 +5,15 @@
 {% endblock %}
 
 {% block main %}
+    <style>
+    body  {
+        background-image: url("https://forhumanity.yale.edu/sites/default/files/styles/post_hero/public/2021/images/Yale_Yburst_hero.jpg?h=c33ae526&itok=VW5aTcP6");
+        -webkit-background-size: cover;
+        -moz-background-size: cover;
+        -o-background-size: cover;
+        background-size: cover;
+    }
+    </style>
     <form action="/register" method="post">
         <div class="mb-3">
             <input autocomplete="off" autofocus class="form-control mx-auto w-auto" id="username" name="username" placeholder="Username" type="text">
