--- a/bulldogbrain/templates/assignmentsform.html
+++ b/bulldogbrain/templates/assignmentsform.html
@@ -18,9 +18,11 @@
     </style> -->
     <style>
         body  {
-        background-image: url("/static/images/backgroundBDBrain.jpeg");
-        background-size: 100%;
-        background-position-y: 0px;
+          background: url("static/images/yalebackground.jpg") no-repeat center center fixed;
+          -webkit-background-size: cover;
+          -moz-background-size: cover;
+          -o-background-size: cover;
+          background-size: cover;
         }
     </style>
     <div><div class='box'></div></div>
