--- a/bulldogbrain/templates/list.html
+++ b/bulldogbrain/templates/list.html
@@ -51,12 +51,14 @@
 </div> -->
 <style>
     body  {
-      background-image: url("https://cdn.wallpapersafari.com/7/71/FRDyLv.jpg");
-      background-size: 100%;
-      background-position-y: 0px;
+      background: url("static/images/yalebackground.jpg") no-repeat center center fixed;
+      -webkit-background-size: cover;
+      -moz-background-size: cover;
+      -o-background-size: cover;
+      background-size: cover;
     }
 </style>
-<strong style = "position:relative; top:-110px; font-size: 45px; color:white;">Reminders</strong>
+<strong style = "position:relative; top:-110px; font-size: 50px; color:white;">List</strong>
 <div class="row">
 <div class="column">
     <strong style = "position:relative; top:-130px; font-size: 40px; color:white;">Assignments</strong>
