--- a/bulldogbrain/templates/dayImportance.html
+++ b/bulldogbrain/templates/dayImportance.html
@@ -5,14 +5,19 @@
 {% endblock %}
 
 {% block main %}
+<button class="dropbtn" style="position: relative; left: 50%; top: -115px">
+  <a style="text-decoration: none; color: white;" href="/today">Sort by Time</a>
+</button>
 <style>
     body  {
-      background-image: url("https://cdn.wallpapersafari.com/7/71/FRDyLv.jpg");
-      background-size: 100%;
-      background-position-y: 0px;
+      background: url("static/images/yalebackground.jpg") no-repeat center center fixed;
+      -webkit-background-size: cover;
+      -moz-background-size: cover;
+      -o-background-size: cover;
+      background-size: cover;
     }
 </style>
-<strong style = "color:white; position: relative; top: -110px; font-size: 45px" >Today</strong>
+<strong style = "color:white; position: relative; top: -110px; font-size: 45px" >Urgent</strong>
     <div class="row">
     <div class="column">
         <strong style = "color:white; position:relative; top:-130px; font-size: 40px">Assignments</strong>
@@ -102,4 +107,5 @@
             <!-- <img src="https://printer.yale.edu/sites/default/files/files/iPhone18.jpg" style="width:80px; height:144px; position:relative; top:-380px;" class="imagecenter"></img> -->
         </div>
     </div>
+</body>
 {% endblock %}
