--- a/bulldogbrain/templates/login.html
+++ b/bulldogbrain/templates/login.html
@@ -19,10 +19,10 @@
 </head>
     <form action="/login" method="post">
         <div class="mb-3">
-            <input autocomplete="off" autofocus class="form-control mx-auto w-auto loginbox" id="username" name="username" placeholder="Username" type="text">
+            <input autocomplete="off" autofocus class="form-control mx-auto w-auto loginbox" id="username" name="username" placeholder="Username" type="text" required>
         </div>
         <div class="mb-3">
-            <input class="form-control mx-auto w-auto loginbox" id="password" name="password" placeholder="Password" type="password">
+            <input class="form-control mx-auto w-auto loginbox" id="password" name="password" placeholder="Password" type="password" required>
         </div>
         <button class="btn btn-primary button button1" type="submit">Log In</button>
     </form>
